apps/services/grill-stats/overlays/prod/patches/grill-stats-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grill-stats
  namespace: grill-stats
spec:
  template:
    spec:
      containers:
      - name: grill-stats
