apps/services/grill-stats/overlays/prod/patches/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
  namespace: grill-stats
spec:
  template:
    spec:
      containers:
      - name: device-service
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-service
  namespace: grill-stats
spec:
  template:
    spec:
      containers:
      - name: temperature-service
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: grill-stats
spec:
  template:
    spec:
      containers:
      - name: influxdb
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 4Gi
